objects/Send_Email_Notification_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Additional_Emails__c</fullName>
        <description>Additional emails that will receive the email notification</description>
        <inlineHelpText>Additional emails that will receive the email notification</inlineHelpText>
        <label>Additional Emails</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exception_Emails__c</fullName>
        <description>Emails that will not be notified even if they are on the Additional Emails or part of a Group</description>
        <inlineHelpText>Emails that will not be notified even if they are on the Additional Emails or part of a Group. Use semi-colon to separate more than one email entry.</inlineHelpText>
        <label>Exception Emails</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicator if this setting is currently in use.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Public_Group__c</fullName>
        <description>Name of the Public Group that need to receive the email notification on BCC</description>
        <label>Public Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Send Email Notification Setting</label>
</CustomObject>